jpackage default, distroless Docker, optimized jlink, launcher script
Build defaults:
- make package → jpackage + stripped jlink JRE (8s build vs 57s native)
- make native → GraalVM native-image (opt-in for max perf)
- Launcher script: auto-detects jpackage > native > jar

zinc build defaults:
- --package (default): jpackage + jlink with stripped JRE (no JDK in prod)
- --native: GraalVM native-image (opt-in)
- --fat-jar: uber jar
- --docker: multi-stage with jlink JRE on distroless base

jlink optimizations: --strip-debug --no-man-pages --no-header-files --compress=zip-6
Docker: gcr.io/distroless/base-nossl-debian12:nonroot (minimal attack surface)
jdeps auto-detects required JRE modules from dependency jars

232 tests, 14 e2e, all passing.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>